feat: getFeed - NoSQL approach